--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Webpage</title>
+        <title>AAAARGH!</title>
+        <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
     <body>
-        Hello, World!
-        <img src="chewy1.jpg"></img>
+        <h1 id="title">Chewbacca</h1>
+        <img src="chewy1.jpg" class="center"/>
+        <ul>
+            <li><a href="rebellion.html">Involvement in the rebellion<a/></li>
+            <li><a href="bowcaster.html">Bow Caster</a></li>
+            <li><a href="hansolo.html">Han Solo</a></li>
+        </ul>
+        <p>Chewbacca (Chewie) is a Wookie from the planet Kashyyyk and was instrumental in the rebellions overthowing of the Imperial Empire.</p>
     </body>
 </html>
