--- a/bowcaster.html
+++ b/bowcaster.html
@@ -11,7 +11,7 @@
         <h2 id="title">Chewbacca's Bowcaster</h2>
         <img src="bowcaster.jpeg" class="center"/>
         <p>
-            The like most Wookie's of the planet Kashyyyk the bowcaster is Chewie's weapon of choice.
+            Like most Wookies of the planet Kashyyyk the bowcaster is Chewie's weapon of choice.
         </p>
     </body>
 </html>
