--- a/rebellion.html
+++ b/rebellion.html
@@ -4,11 +4,34 @@
         <title>
             The Rebelion
         </title>
-        <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <!-- <link rel="stylesheet" type="text/css" href="mystyle.css"> -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
     </head>
     <body>
         <p><a href="index.html">Home</a></p>
         <h2 id="title">The Rebelion</h1>
+
+        <ul class="nav nav-pills">
+            <li class="active"><a data-toggle="pill" href="#iv">IV</a></li>
+            <li><a data-toggle="pill" href="#v">V</a></li>
+            <li><a data-toggle="pill" href="#vi">VI</a></li>
+        </ul>
+        <div class="tab-content">
+            <div id="iv" class="tab-pane fade in active">
+                <h3>IV</h3>
+                <p>Some content.</p>
+            </div>
+            <div id="v" class="tab-pane fade">
+                <h3>V</h3>
+                <p>Some content in menu 1.</p>
+            </div>
+            <div id="vi" class="tab-pane fade">
+                <h3>VI</h3>
+                <p>Some content in menu 2.</p>
+        </div>
+
+
         <p>
             Chewie's path towards joining the rebellion began on the planet Tatooine where he was hiding out with his partner
             Han Solo from the intergalactic ganster Jabba the Hut, of the Hut crime family. Han and Chewbacca were hired to transport
@@ -20,7 +43,11 @@
         </p>
         <p>
             Chewbacca took part in the Rebel Alliance's defeat on the planet Hoth were he was able to perform miracolous repairs on
-            the Milenium Falcon allowing him and Han to escape from the clutches of the invading Imperial forces.
+            the Milenium Falcon allowing him and Han to escape from the clutches of the invading Imperial forces. While hiding out
+            in Cloud City Chewbacca was
+        </p>
+        <p>
+
         </p>
     </body>
 </html>
