--- a/bowcaster.html
+++ b/bowcaster.html
@@ -5,13 +5,44 @@
             The Bowcaster
         </title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
     <body>
-        <p><a href="index.html">Home</a></p>
+        <p><a href="index.html" role="button"><span class="glyphicon glyphicon-home"></span></a></p>
         <h2 id="title">Chewbacca's Bowcaster</h2>
         <img src="bowcaster.jpeg" class="center"/>
-        <p>
-            Like most Wookies of the planet Kashyyyk the bowcaster is Chewie's weapon of choice.
+        <p class="text-style">
+            Like most Wookies of the planet Kashyyyk the bowcaster is Chewie's weapon of choice. Some of the stats, taken from Bill
+            Smith's <i>The Essential Guide to Weapons and Technology</i>,of the bowcaster
+            can be seen compared to other popular blasters in the table below. It can be seen that the bowcaster lacks
+            range and has to be reloaded frequently, but like the mighty Wookies that weild them, they make up for this
+            with power.
         </p>
+        <table>
+            <tr>
+                <th></th>
+                <th>Bowcaster</th>
+                <th>DL-44</th>
+                <th>E-11</th>
+            </tr>
+            <tr>
+                <th>Optimal Range</th>
+                <th>30m</th>
+                <th>25m</th>
+                <th>100m</th>
+            </tr>
+            <tr>
+                <th>Maximum Range</th>
+                <th>50m</th>
+                <th>50m</th>
+                <th>300m</th>
+            </tr>
+            <tr>
+                <th>Shots per reload</th>
+                <th>6</th>
+                <th>25</th>
+                <th>100</th>
+            </tr>
+        </table>
     </body>
 </html>
