--- a/rebellion.html
+++ b/rebellion.html
@@ -2,51 +2,46 @@
 <html>
     <head>
         <title>
-            The Rebelion
+            The Rebellion
         </title>
-        <!-- <link rel="stylesheet" type="text/css" href="mystyle.css"> -->
+        <link rel="stylesheet" type="text/css" href="mystyle.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    </head>
     <body>
-        <p><a href="index.html">Home</a></p>
-        <h2 id="title">The Rebelion</h1>
+        <p>
+            <a href="index.html" role="button"><span class="glyphicon glyphicon-home"></span></a>
+        </p>
+        <h2 id="title">The Rebellion</h1>
 
-        <ul class="nav nav-pills">
-            <li class="active"><a data-toggle="pill" href="#iv">IV</a></li>
-            <li><a data-toggle="pill" href="#v">V</a></li>
-            <li><a data-toggle="pill" href="#vi">VI</a></li>
-        </ul>
-        <div class="tab-content">
-            <div id="iv" class="tab-pane fade in active">
-                <h3>IV</h3>
-                <p>Some content.</p>
+        <div class="container">
+            <div class="btn-group btn-group-justified">
+                <a class="btn btn-primary" href="#iv">IV</a></button>
+                <a class="btn btn-primary" href="#v">V</a></button>
+                <a class="btn btn-primary" href="#vi">VI</a></button>
             </div>
-            <div id="v" class="tab-pane fade">
-                <h3>V</h3>
-                <p>Some content in menu 1.</p>
-            </div>
-            <div id="vi" class="tab-pane fade">
-                <h3>VI</h3>
-                <p>Some content in menu 2.</p>
         </div>
-
-
-        <p>
-            Chewie's path towards joining the rebellion began on the planet Tatooine where he was hiding out with his partner
-            Han Solo from the intergalactic ganster Jabba the Hut, of the Hut crime family. Han and Chewbacca were hired to transport
-            the young Luke Skywalker and the ageing Obi-Wan (Old Ben) Kenobi to the planet Alderan. Upon discovering that Alderan was
-            destroyed the passengers of the Milenium Falcon were captured by the Death Star, a small moon sized imperial ship and weapon.
-            On the Death Star Chewie, posing as a hardend criminal, took part in the daring rescue of Princess Leaia Organa. Once the
-            princess was returned to the Rebel Alliance Chewie and Han decided to take their reward and and leave to repay their debt
-            to Jabba. But after having second thoughts they returned and helped helped the Rebellion destroy the Death Star.
-        </p>
-        <p>
-            Chewbacca took part in the Rebel Alliance's defeat on the planet Hoth were he was able to perform miracolous repairs on
-            the Milenium Falcon allowing him and Han to escape from the clutches of the invading Imperial forces. While hiding out
-            in Cloud City Chewbacca was
-        </p>
-        <p>
-
-        </p>
+        <div class="tab-content">
+            <div id="iv" class="container tab-pane active">
+                <h3>IV</h3>
+                <p>Chewie's path towards joining the rebellion began on the planet Tatooine where he was hiding out with his partner
+                    Han Solo from the intergalactic ganster Jabba the Hut, of the Hut crime family. Han and Chewbacca were hired to transport
+                    the young Luke Skywalker and the ageing Obi-Wan (Old Ben) Kenobi to the planet Alderan. Upon discovering that Alderan was
+                    destroyed the passengers of the Milenium Falcon were captured by the Death Star, a small moon sized imperial ship and weapon.
+                    On the Death Star Chewie, posing as a hardend criminal, took part in the daring rescue of Princess Leaia Organa. Once the
+                    princess was returned to the Rebel Alliance Chewie and Han decided to take their reward and and leave to repay their debt
+                    to Jabba. But after having second thoughts they returned and helped helped the Rebellion destroy the Death Star.</p>
+            </div>
+            <div id="v" class="container tab-pane active">
+                <h3>V</h3>
+                <p>Chewbacca took part in the Rebel Alliance's defeat on the planet Hoth were he was able to perform miracolous repairs on
+                    the Milenium Falcon allowing him and Han to escape from the clutches of the invading Imperial forces. While hiding out
+                    in Cloud City Chewbacca, along with his friends, were betrayed by Lando Calrisian. They then had to escape th imperial
+                    forces on the city, but during so lost Han Solo to the bounty hunter Boba Fett.</p>
+            </div>
+            <div id="vi" class="container tab-pane active">
+                <h3>VI</h3>
+                <p>Chewbacca then took part in the rescue of his best friend Han Solo from the Jabba the Hutt. Once Solo was once again safe
+                they him and Chewie teamed up for the increadable important mission of destroying the shield generator for the Death Star. This
+                allowed the Rebel Alliance to once again destroy the Death Star, and this time defeat the Galactic Empire.</p>
+        </div>
     </body>
 </html>
