--- a/index.html
+++ b/index.html
@@ -6,17 +6,25 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     </head>
     <body>
-        <h1 id="title">Chewbacca</h1>
-        <img src="chewy1.jpg" class="center"/>
-        <ul class="col-3">
-            <li><a href="rebellion.html">Involvement in the rebellion<a/></li>
-            <li><a href="bowcaster.html">Bow Caster</a></li>
-            <li><a href="hansolo.html">Han Solo</a></li>
-        </ul>
-        <p>
-            Chewbacca (Chewie) is a Wookie from the planet Kashyyyk and was instrumental in the rebellions overthowing of the Imperial
-            Empire. Through out his life he could be labeled many things prisoner, rebel, hero, smuggler, arm tearer, criminal and friend.
-            Clik on the links above to learn more about this wonderful Wookie!
-        </p>
+        <div class="contianer">
+            <h1 id="main-title">Chewbacca</h1>
+            <img src="chewy1.jpg" class="center" style="padding-bottom: 25px"/>
+            <div class="row">
+                <div class="col-2">
+                    <ul>
+                        <li><a href="rebellion.html">Involvement in the rebellion<a/></li>
+                        <li><a href="bowcaster.html">Bow Caster</a></li>
+                        <li><a href="hansolo.html">Han Solo</a></li>
+                    </ul>
+                </div>
+                <div class="col-10">
+                    <p>
+                        Chewbacca (Chewie) is a Wookie from the planet Kashyyyk and was instrumental in the rebellions overthowing of the Imperial
+                        Empire. Through out his life he could be labeled many things prisoner, rebel, hero, smuggler, arm tearer, criminal and friend.
+                        Click on the links to learn more about this wonderful Wookie!
+                    </p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
