--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
             <h1 id="main-title">Chewbacca</h1>
             <img src="chewy1.jpg" class="center" style="padding-bottom: 25px"/>
             <div class="row">
-                <div class="col-2">
+                <div class="col-sm-2">
                     <ul>
                         <li><a href="rebellion.html">Involvement in the rebellion<a/></li>
                         <li><a href="bowcaster.html">Bow Caster</a></li>
                         <li><a href="hansolo.html">Han Solo</a></li>
                     </ul>
                 </div>
-                <div class="col-10">
+                <div class="col-sm-10">
                     <p>
                         Chewbacca (Chewie) is a Wookie from the planet Kashyyyk and was instrumental in the rebellions overthowing of the Imperial
                         Empire. Through out his life he could be labeled many things prisoner, rebel, hero, smuggler, arm tearer, criminal and friend.
