--- a/hansolo.html
+++ b/hansolo.html
@@ -12,9 +12,11 @@
         <h2 id="title">Han Solo</h2>
         <img src="hansolo.jpeg" class=center />
         <p class="text-style">
-            Han Solo is Chewbaccs's partner and best friend. Chewbacca and Han Solo met when Chewie was imprisoned by imperial forces
-            after was Han was tossed into a pit Chewie was kept in for Chewie to kill him. Teamin up they escaped together and joined a crew of
-            ciminals and took part in an attempted robery of a shipment of fuel being transported on a train.
+            Han Solo is Chewbaccs's partner and best friend. Chewbacca and Han Solo met during a time Chewie was imprisoned by imperial forces
+            when Han was tossed into a pit Chewie was kept in for Chewie to kill him. Teaming up they escaped together and joined a crew of
+            ciminals and took part in an attempted robery of a shipment of fuel being transported on a train. During this mission and
+            the adventure that resulted from the subsequent fallout Chewie and Han became close friends. They remained friends and
+            partners for over 30 years until Han's death at the hands of his son, the moody Kylo Ren.
         </p>
     </body>
 </html>
