--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 </div>
                 <div class="col-sm-10">
                     <p>
-                        Chewbacca (Chewie) is a Wookie from the planet Kashyyyk and was instrumental in the rebellions overthowing of the Imperial
-                        Empire. Through out his life he could be labeled many things prisoner, rebel, hero, smuggler, arm tearer, criminal and friend.
+                        Chewbacca (Chewie) is a Wookie from the planet Kashyyyk and was instrumental in the rebellion's overthowing of the Imperial
+                        Empire. Throughout his life he could be labeled many things prisoner, rebel, hero, smuggler, arm tearer, criminal and friend.
                         Click on the links to learn more about this wonderful Wookie!
                     </p>
                 </div>
