--- a/bowcaster.html
+++ b/bowcaster.html
@@ -12,7 +12,7 @@
         <h2 id="title">Chewbacca's Bowcaster</h2>
         <img src="bowcaster.jpeg" class="center"/>
         <p class="text-style">
-            Like most Wookies of the planet Kashyyyk the bowcaster is Chewie's weapon of choice. Some of the stats, taken from Bill
+            Like most Wookies of the planet Kashyyyk the bowcaster is Chewie's weapon of choice. Some stats, taken from Bill
             Smith's <i>The Essential Guide to Weapons and Technology</i>,of the bowcaster
             can be seen compared to other popular blasters in the table below. It can be seen that the bowcaster lacks
             range and has to be reloaded frequently, but like the mighty Wookies that weild them, they make up for this
