--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="col-sm-2">
                     <ul>
                         <li><a href="rebellion.html">Involvement in the rebellion<a/></li>
-                        <li><a href="bowcaster.html">Bow Caster</a></li>
+                        <li><a href="bowcaster.html">Bowcaster</a></li>
                         <li><a href="hansolo.html">Han Solo</a></li>
                     </ul>
                 </div>
